@@ -1,3 +1,8 @@
+2008-09-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* gamemgr/modmgr.cc, shapes/shapevga.cc: Fixed problems when creating new
+	  games from within ES.
+	* mapedit/shapeedit.cc: Changing offsets didn't flag a shape as modified.
+
 2008-09-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* actors.*: Prevent damage to dead NPCs (makes armageddon work better).
 	  Prevent Penumbra and Skara Brae ghosts from awakening in a more consistent
